--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,5 @@ docs/source/*.rst
 build/*
 install/*
 log/*
-# spot_driver/config/spot_ros_airlab.yaml
-# starter.sh
+spot_driver/config/spot_ros_airlab.yaml
+starter.sh
