--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ros_utilities"]
 	path = ros_utilities
 	url = https://github.com/bdaiinstitute/ros_utilities.git
+[submodule "isaacplan"]
+	path = isaacplan
+	url = https://github.com/Jaraxxus-Me/IsaacPlan.git
