--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "isaacplan"]
 	path = isaacplan
 	url = https://github.com/Jaraxxus-Me/IsaacPlan.git
+[submodule "downward"]
+	path = downward
+	url = https://github.com/aibasel/downward.git
