--- a/spot_plan/setup.cfg
+++ b/spot_plan/setup.cfg
@@ -1,4 +1,4 @@
 [develop]
-script_dir=$base/lib/spot_examples
+script_dir=$base/lib/spot_plan
 [install]
-install_scripts=$base/lib/spot_examples
+install_scripts=$base/lib/spot_plan
