--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "downward"]
 	path = downward
 	url = https://github.com/aibasel/downward.git
+[submodule "neupi"]
+	path = neupi
+	url = https://github.com/Jaraxxus-Me/NeuPI.git
